Annotation processors were configured successfully - Dagger2 was implemented - Retrofit2 was implemented - Data binding was implemented for Recyclerview items

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">LyricsAppJLRF</string>
     <string name="title_home">Home</string>
+    <string name="get_top_songs">Get top songs</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string name="top_songs">Top Songs</string>
 </resources>
