--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,6 @@
     <string name="app_name">LyricsAppJLRF</string>
     <string name="title_home">Home</string>
     <string name="get_top_songs">Get top songs</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="about">About</string>
     <string name="top_songs">Top Songs</string>
 </resources>
